# manage-secret

./: MANIFEST.in  README.md  pyproject.toml
src/secret_manager/: installer.py
src/secret_manager/assets/: get-secrets.js  manage-secrets.sh
