[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secret-manager"
version = "0.1.0"
description = "A secure local secrets manager using KeePassXC and GPG"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
secret-manager-init = "secret_manager.installer:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["secret_manager"]
include-package-data = true

[tool.setuptools.package-data]
secret_manager = ["assets/*"]
